# bettergame-launcher

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/functions/: isSupportedOS.js
src/functions/sysinfo/: linux.js  macos.js
src/layouts/: HomeLayout.jsx
src/routes/: Credits.jsx  Home.jsx  Settings.jsx  SystemReport.jsx  Unsupported.jsx
src/routes/auth/: Login.jsx  Logout.jsx
